<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Etiqueta_muestrabotones"
        android:onClick="muestraBotones"/>
    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Etiqueta_muestraspinners"
        android:onClick="muestraSpinners"/>
    <Button
        android:id="@+id/buttonListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listView"
        android:onClick="startnewActivity"/>
    <Button
        android:id="@+id/buttonGridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gridView"
        android:onClick="startnewActivity"/>

</LinearLayout>
