<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botones" />


        <Button
            android:text="@string/hola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraTextButton"/>
        <Button
            android:text="@string/adios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraTextButton"/>
        <Button
            android:text="@string/chao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraTextButton"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imageButtonA" />

        <ImageButton
            android:src="@drawable/android_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoImageButton"
            android:tag="1"/>
        <ImageButton
            android:src="@drawable/camera_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoImageButton"
            android:tag="2"/>
        <ImageButton
            android:src="@drawable/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoImageButton"
            android:tag="3"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imageButtonB" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <ImageButton
            android:src="@drawable/button_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoImageButton"
            android:tag="4"/>
        <ImageButton
            android:src="@drawable/button_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoImageButton"
            android:tag="5"/>
        <ImageButton
            android:src="@drawable/button_rating_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoImageButton"
            android:tag="6"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_noexlusivo" />
    <RadioGroup
        android:id="@+id/exclusive_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <RadioButton

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hola"
            android:onClick="muestraTextRadioButton"
            />
        <RadioButton

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/adios"
            android:onClick="muestraTextRadioButton" />
        <RadioButton

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/chao"
            android:onClick="muestraTextRadioButton" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkboxGroup" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">


        <CheckBox
            android:text="@string/hola"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraTextCheckBox"/>
        <CheckBox
            android:text="@string/adios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraTextCheckBox"/>
        <CheckBox
            android:text="@string/chao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraTextCheckBox"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toogle" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <!--  Uses the default ON/OFF labels -->
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoToggleBoton"/>
        <ToggleButton
            android:textOn="@string/ssl_toggle_on"
            android:textOff="@string/ssl_toggle_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoToggleBoton"/>
        <ToggleButton
            android:textOn="@string/gps_toggle_on"
            android:textOff="@string/gps_toggle_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraInfoToggleBoton"/>
    </LinearLayout>
</LinearLayout>

